# VFMS

./: .editorconfig  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
VFMS/: command_map.hpp  file.hpp  file_structure.hpp  string_parser.hpp  vfs.hpp
VFMS/command/: ls.hpp  realize_command.hpp
src/: cd.cpp  command_map.cpp  file.cpp  ls.cpp  main.cpp  mkdir.cpp  process_args.cpp  string_parser.cpp  vfs.cpp
src/assets/: error.cpp  usage.cpp
